static/css/main.css
/* ... */
.tweetItem .tweetMeta a.dateLink:hover {
    text-decoration: underline;
}

.tweetItem .tweetMain {
    width: 0;
    flex-shrink: 1;
    flex-grow: 1;
    margin-left: .5em;
}

.tweetItem .tweetBody {
    white-space: pre-line;
    word-break: break-word;
}

.tweetItem .tweetUserMention {
    position: relative;
    cursor: pointer;
}

.UserPopup {
    cursor: initial;
    position: absolute;
    left: 0;
    bottom: 100%;
    background: var(--background);
    box-shadow: 0 4px 12px rgba(0, 0, 0, .3);
    width: 300px;
    font-weight: normal;
    font-size: .8em;
    line-height: 1.4em;
    word-break: break-word;
    transition: opacity .2s, transform .2s;
    pointer-events: none;
    opacity: 0;
    transform: translateY(4px);
}

.tweetUserMention:hover .UserPopup {
    pointer-events: all;
    opacity: 1;
    transform: translateY(0);
}

.UserPopup .userPopupHeader {
    padding: var(--lc-padding);
    overflow: hidden;
    padding: .5rem;
    border-bottom: 1px solid #000;
    line-height: 1.5em;
}

.UserPopup a.nameLink {
    text-decoration: none;
    color: inherit;
}

.UserPopup a.nameLink:hover {
    text-decoration: underline;
}

.UserPopup .userPopupURL a {
    color: inherit;
}

.UserPopup .profileImg {
    border-radius: 50%;
    float: left;
    margin-right: .5em;
}

.UserPopup .name {
    font-weight: bold;
}

.UserPopup .location {
    color: var(--background-light);
}

.UserPopup .userPopupDescription {
    padding: var(--lc-padding);
    padding-top: .5rem;
}

.UserPopup .userPopupFilters {
    padding: var(--lc-padding);
}

.UserPopup .userPopupFilter {
    border: 0;
    background: transparent;
    display: inline;
    padding: 0;
    cursor: pointer;
}

.UserPopup .userPopupFilter:hover {
    text-decoration: underline;
}

.UserPopup .userPopupStats {
    padding: var(--lc-padding);
}

.tweetMedia {
    display: flex;
    flex-direction: row;
    align-items: center;
    overflow-x: auto;
}

.tweetImgBox,
.tweetVideoBox {
    margin: .25em .5em .25em 0;
}

.tweetVideoBox {
    position: relative;
}

.tweetVideoBox::after {
    content: 'video';
    display: block;
    position: absolute;
    right: 8px;
    bottom: 4px;
    text-shadow: 0 1px 5px #000;
    pointer-events: none;
    font-size: .8em;
    line-height: 1em;
    color: #fff;
}

.tweetImg {
    max-height: 120px;
    max-width: 300px;
    cursor: pointer;
    display: block;
}

.tweetImg:hover {
    opacity: .8;
}

.tweetImgPreview {
    display: block;
}

.tweetStats {
    color: var(--foreground-light);
    font-size: .8em;
}

.tweetStats .tweetConversation {
    border: 0;
    color: var(--foreground-light);
    display: inline;
    cursor: pointer;
    padding: 0;
}

.tweetStats .selfRetweeted {
    color: var(--tw-rt);
}
.tweetStats .selfFavorited {
    color: var(--tw-fav);
}

.tweetStats .tweetConversation:hover {
    text-decoration: underline;
    color: var(--tw-re);
}

.sidebar,
.stats {
    position: absolute;
    top: -1px;
    width: calc(50vw - 400px - .5em);
    max-width: 360px;
}

.sidebar {
    border-top: 1px solid #000;
    right: 100%;
    height: 100%;
    overflow-y: auto;
    text-align: right;
}

.sidebar .selfMetrics {
    padding: var(--lc-padding);
    border-top: 1px solid #000;
    margin-top: 1em;
}

.sidebar .selfMetrics a {
    color: inherit;
    text-decoration: none;
}

.sidebar .selfMetrics a:hover {
    text-decoration: underline;
}

.stats {
    left: 100%;
    height: calc(100% + 1em + 1px);
    top: calc(-1em - 1px);
    overflow-y: auto;
    padding-top: 1em;
    box-sizing: border-box;
}

.channelItem {
    padding: var(--lc-padding);
    cursor: pointer;
    position: relative;
}

.channelItem:not(.editing):hover {
    background: var(--highlight);
}

.channelItem.pseudoChannel {
    color: var(--foreground-light);
}

.channelItem .channelButtons {
    display: none;
    z-index: 1;
    position: absolute;
    top: 0;
    left: 0;
    padding: var(--lc-padding);
}

.channelItem:hover .channelButtons {
    display: block;
    padding-left: .25em;
}

.channelItem .channelButton {
    border: 0;
    background: 0;
    cursor: pointer;
    padding: 0 .25em;
    color: inherit;
}

.channelItem .channelButton:hover {
    color: var(--foreground-light);
}

.channelItem .shortcutNumber {
    z-index: 0;
    position: absolute;
    top: 0;
    left: 0;
    padding: var(--lc-padding);
    color: var(--foreground-light);
}

.channelItem.solid:hover {
    background: var(--foreground-light);
}

.channelItem.solid .shortcutNumber {
    color: inherit;
}

.channelItem:hover .shortcutNumber {
    display: none;
}

.channelItem.editing {
    padding: 0;
}

.channelItem .channelInput {
    display: flex;
    flex-direction: row;
    align-items: center;
}

.channelItem .channelInput input {
    width: 0;
    flex-grow: 1;
    flex-shrink: 1;
    padding: var(--lc-padding);
    background: 0;
    color: inherit;
}

.channelItem .channelInput .channelButton {
    padding: var(--lc-padding);
    flex-grow: 0;
    flex-shrink: 0;
}

.trends,
.fans {
    position: relative;
    border-top: 1px solid #000;
    min-height: 5em;
}

.trendsTitle,
.fansTitle {
    background: var(--background);
    padding: var(--lc-padding);
    position: absolute;
    top: 0;
    left: 50%;
    transform: translate(-50%, -50%);
    font-weight: bold;
}

.trends {
    padding: .6em 0;
}

.tweetTrend {
    width: 100%;
    font-size: .8em;
    padding: var(--lc-padding);
    padding-bottom: 1rem;
    box-sizing: border-box;
}

.trendMain {
    width: 100%;
    display: flex;
    flex-direction: row;
    align-items: flex-start;
    justify-content: space-between;
}

.tweetTrendText {
    word-break: break-word;
    max-height: 3em;
    overflow: hidden;
    position: relative;
    margin-right: 6px;
    flex-grow: 1;
    flex-shrink: 1;
    width: 0;
}

.tweetTrendText .date {
    color: var(--foreground-light);
}
/* ... */

